--- a/AUTHORS
+++ b/AUTHORS
@@ -4,4 +4,4 @@ Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
 
 Ayan Nicholas <ayannicholas@gmail.com>
-Habiba Sangari <>
+Habiba Sangari <habibasangarimohammed@gmail.com>
